test/typeerrors/Heuristics/SimilarLiteral1.hs
module SimilarLiteral1 where

floatSum :: [Float] -> Float
floatSum = foldr (+) 0
